feat(notification): implement notification management module